--- a/scss/blocks/stats-features.scss
+++ b/scss/blocks/stats-features.scss
@@ -19,12 +19,13 @@
 }
 
 .stats-features__cash{
-  font-size: 40px;
+  font-size: 37px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
 .stats-features__text{
+  font-family: "PT Sans Narrow", sans-serif;
   text-align: right;
   font-size:18px;
 }
