--- a/scss/globals/fonts.scss
+++ b/scss/globals/fonts.scss
@@ -2,12 +2,12 @@
   font-family:"PT Sans Narrow", sans-serif;
   font-style: normal;
   font-weight: 400;
-  src:url('../fonts/PTSansNarrow-Regular.ttf') format('ttf');
+  src:url('../../fonts/PTSansNarrow-Regular.ttf') format('ttf');
 }
 
 @font-face{
   font-family:'PT Sans Narrow',sans-serif;
   font-style: normal;
   font-weight: 700;
-  src:url('../fonts/PTSansNarrow-Bold.ttf') format('ttf');
+  src:url('../../fonts/PTSansNarrow-Bold.ttf') format('ttf');
 }
