--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,16 @@
 @import "blocks/reviews.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/reviews-slider.scss";
+//---------
+@import "blocks/photo-main.scss";
+@import "blocks/photo-title.scss";
+@import "blocks/photo-group.scss";
+@import "blocks/photo-card.scss";
+@import "blocks/price-list.scss";
+@import "blocks/timer.scss";
+//--------
+
+@import "blocks/form-page.scss";
+@import "blocks/form.scss";
+@import "blocks/modal.scss";
+@import "blocks/private.scss";
