--- a/scss/blocks/main-nav.scss
+++ b/scss/blocks/main-nav.scss
@@ -19,8 +19,6 @@
   text-align: center;
 }
 
-
-
 .main-menu__item a{
   font-family: "PT Sans Narrow", sans-serif;
   text-transform: uppercase;
@@ -151,9 +149,11 @@
     min-height: 80vh;
     background-color: #6a4d38;
   }
+
   .main-nav--nojs .main-nav__toggle{
     display: none;
   }
+
 
   .main-nav--nojs .main-nav__wrapper{
     position:static;
@@ -179,6 +179,11 @@
     background-color: rgb(0,0,0);
   }
 
+  
+  .main-nav__toggle{
+    display: none;
+  }
+  
   .main-nav__wrapper{
     width: 640px;
     margin:auto;
