--- a/scss/blocks/mobile-slider.scss
+++ b/scss/blocks/mobile-slider.scss
@@ -11,18 +11,21 @@
 
   .mobile-slider__controls {
     position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 90px;
     z-index: 11;
-    bottom: 10px;
+    bottom: 40px;
     left: 50%;
     transform: translateX(-50%);
   }
 
   .mobile-slider__controls label {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border: 1px solid white;
     display: inline-block;
-    border-radius: 50%;
+    transform:rotate(45deg);
     cursor: pointer;
   }
 
@@ -150,7 +153,8 @@
     align-items: center;
     text-align: center;
     box-sizing: border-box;
-    padding-top: 83px;
+    justify-content: space-around;
+    padding:23px 0 40px;
   }
 
   .slide__wrap{
