--- a/scss/blocks/news-stocks.scss
+++ b/scss/blocks/news-stocks.scss
@@ -7,8 +7,27 @@
   margin-top: -22px;
   display: flex;
   flex-direction: column;
-  border:1px solid black;
+  position:relative;
+  padding-top: 40px;
 }
+
+  .news-stocks__figure {
+    position: absolute;
+    z-index: 10;
+    top: -12px;
+    width: 320px;
+    height: 34px;
+    background: url('../../svg/figure.svg');
+  }
+  .reviews__figureBlack {
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    width: 320px;
+    height: 34px;
+    background: url('../../svg/figureBlack.svg');
+  }
+
 
 .news-stocks a{
   display: block;
@@ -19,37 +38,53 @@
   font-size: 30px;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 40px;
+
 }
 
 .news-stocks__price{
   display: none;
 }
 
-.news-stocks__newcomer,
-.news-stocks__alco{
+.news-stocks__message{
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 18px;
   line-height: 27px;
+  padding:10px 20px 10px 90px;
+  position:relative;
 }
 
-.news-stocks__wrap{
- min-height: 50px;
- width: 280px;
-  margin: auto;
-  border:1px solid black;
-  text-align: center;
-  line-height: 50px;
+.news-stocks__message--alco:before{
+  content:"";
+  position:absolute;
+  width:50px;
+  height: 60px;
+  background:url('../../img/Vector29.png');
+  left:20px;
 }
+
+.news-stocks__message--newcommer:before{
+  content: "";
+  position:absolute;
+  width: 50px;
+  height: 60px;
+  background: url('../../img/Vector19.png');
+  left:20px;
+}
+
 
 .news-stocks__btn{
   font-size: 18px;
+  line-height: 50px;
   cursor: pointer;
   font-weight: 700;
   text-transform: uppercase;
-
+  border:1px solid rgb(229,221,213);
+  width: 280px;
+  text-align: center;
+  min-height: 50px;
+  margin:auto;
+  background: transparent;
 }
-
 
 
 @media(min-width: $tablet-width) {
@@ -59,9 +94,20 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: space-between;
     box-sizing: border-box;
     padding-left: 64px;
     padding-right: 64px;
+  }
+
+  .news-stocks__btn{
+    width: 160px;
+  margin:0;
+  }
+
+  .reviews__figureBlack,
+  .news-stocks__figure{
+    display: none;
   }
 
   .news-stocks__price{
@@ -110,17 +156,14 @@
     left:10px;
     top:20px;
   }
-
   .news-stocks__title{
     font-size: 40px;
     line-height: 30px;
   }
-
   .news-stocks__wrap{
     width:160px;
     margin-left: 84px;
   }
-
 }
 
 @media(min-width:$desktop-width){
