--- a/scss/blocks/reviews-slider.scss
+++ b/scss/blocks/reviews-slider.scss
@@ -1,10 +1,8 @@
 .reviews-slider{
   width:320px;
   min-height: 175px;
-  border:1px solid black;
   margin: auto;
   overflow: hidden;
-
 }
 
 .reviews-slider__inner-slider{
@@ -19,7 +17,7 @@
   float: left;
   text-align: left;
   box-sizing: border-box;
-  padding-left: 60px;
+  padding:10px 20px 10px 90px;
   overflow: hidden;
 }
 
@@ -28,7 +26,7 @@
   .reviews-slider{
     width:640px;
     height: 135px;
-
+    border:1px solid rgb(229,221,213);
   }
 
   .reviews-slider__slide{
@@ -38,7 +36,7 @@
     margin-top: 15px;
     box-sizing: border-box;
     padding-left: 65px;
-    border:1px solid red;
+
   }
 }
 
@@ -52,7 +50,7 @@
   width:50px;
   height:51px;
   background: url('../../img/photo.png');
-  left:-50px;
+  left:-70px;
 }
 
 
@@ -60,6 +58,7 @@
   .reviews-slider {
     width: 960px;
     min-height: 158px;
+    box-shadow: 0 0 1px 1px black;
   }
   .reviews-slider__slide{
     width: 960px;
