--- a/scss/blocks/reviews.scss
+++ b/scss/blocks/reviews.scss
@@ -5,29 +5,45 @@
   margin:auto;
   position: relative;
   text-align: center;
+  padding-top: 15px;
+  padding-bottom:40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.reviews h2{
+.reviews__title{
   font-size: 30px;
-  line-height: 30px;
+  line-height: 40px;
   text-transform: uppercase;
   font-weight: 700;
+  margin:auto;
 }
 
+.reviews__btn{
+  display: none;
+}
+
+
 .reviews__controls{
+  display: flex;
+  justify-content: space-between;
   position: absolute;
   left:50%;
   transform: translateX(-50%);
-  z-index: 100;
+  z-index: 10;
   bottom:30px;
+  width: 90px;
 }
 
 .reviews__controls label{
   display: inline-block;
-  width:15px;
-  height: 15px;
+  width:10px;
+  height: 10px;
   border:1px solid black;
-  border-radius:50%;
+  transform:rotate(45deg);
   cursor:pointer;
 }
 
@@ -56,6 +72,22 @@
     padding-left: 64px;
   }
 
+  .reviews__title{
+    margin: 0;
+  }
+
+  .reviews__btn{
+    font-size: 16px;
+    line-height: 50px;
+    cursor: pointer;
+    font-weight: 700;
+    text-transform: uppercase;
+    width: 160px;
+    min-height: 50px;
+    background: transparent;
+    border:1px solid rgb(229,221,213);
+    display: block;
+  }
 
   #btn-4:checked  ~ .reviews-slider .reviews-slider__inner-slider{
     transform: translate(0);
@@ -66,9 +98,7 @@
   #btn-6:checked  ~ .reviews-slider .reviews-slider__inner-slider{
     transform: translate(-1320px);
   }
-
 }
-
 
 @media(min-width:$desktop-width){
   .reviews{
@@ -78,7 +108,12 @@
     padding-left: 120px;
   }
 
-
+  .reviews__controls{
+    bottom: 48px;
+    background-color: rgb(255,255,255);
+    width: 130px;
+    padding: 0 20px 0;
+  }
 
   #btn-4:checked  ~ .reviews-slider .reviews-slider__inner-slider{
     transform: translate(0);
