--- a/scss/globals/scafoldings.scss
+++ b/scss/globals/scafoldings.scss
@@ -1,3 +1,10 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+
 
 body{
   min-width:320px;
@@ -14,7 +21,6 @@ img{
   max-width: 100%;
   height: auto;
 }
-
 
 ul{
   margin:0;
@@ -35,6 +41,7 @@ a{
   background-color: rgb(255,255,255);
   margin: auto;
 }
+
 
 
 
